{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 83,
  "lineage": "1ad4de6f-14a0-7ab8-b449-c07d381c2066",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-29T00:14:48.935-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wt-gd-pdd2/global/firewalls/hrs-test-http",
            "log_config": [],
            "name": "hrs-test-http",
            "network": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/global/networks/hrs-test-network",
            "priority": 1000,
            "project": "wt-gd-pdd2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/global/firewalls/hrs-test-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "hrs-gcpdev-http-test"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.test_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-29T00:14:48.908-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wt-gd-pdd2/global/firewalls/hrs-test-firewall",
            "log_config": [],
            "name": "hrs-test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/global/networks/hrs-test-network",
            "priority": 1000,
            "project": "wt-gd-pdd2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/global/firewalls/hrs-test-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "hrs-gcpdev-ssh-test"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.test_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "test_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230814",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/zones/asia-east1-a/disks/hrs-dev-deploy-linux-asia-east1-a-1-test"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/wt-gd-pdd2/zones/asia-east1-a/instances/hrs-dev-deploy-linux-asia-east1-a-1-test",
            "instance_id": "4054194640851575824",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "enable-oslogin": "TRUE",
              "ssh-keys": "bbking:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDEKlEvhaMPM9heKjflYYvsx1yRad2DngPhLQuaMzMGGkJO0tWG2IPlO+7teCkFnPT4onTt+c1zwFWUhpTTwGOV2LnSQXxTUJlzX0EqCBZ1y0smZRDae/2zd8HEW+8Kv33uKnLg6wKhIw2+mCCD84kaRbaFK2Bfyfp2bcjf2IKvI7+5Yea/mPoa1KWNhVQyx5D1Bc7w1kpsKj3OOclnAZm/L50aGV+FJbC+HrM7hrKdIFbdI68axfl1WtSOrsxIXvKTPUxLywJCyquLN1aHpCGYFrElZ1Ch8p21EM/Xqo118kdQYsJgio6B/DCYmHN8LhYwOJTcuA8CkH2JZn2705FcrfwgevFQKPpgnNCKemxUcYfTZ19EqD16/IoFlHF9UKLERA5pODodMaHJbEHiu48jI5PgqbI9JSdcJNX5YZ8Tax [...]
            },
            "metadata_fingerprint": "6xAFP8Tm3RU=",
            "name": "hrs-dev-deploy-linux-asia-east1-a-1-test",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.81.76.129",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/global/networks/hrs-test-network",
                "network_ip": "10.55.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/regions/asia-east1/subnetworks/hrs-test-subnetwork",
                "subnetwork_project": "wt-gd-pdd2"
              }
            ],
            "project": "wt-gd-pdd2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/zones/asia-east1-a/instances/hrs-dev-deploy-linux-asia-east1-a-1-test",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "hrs-gcpdev-http-test",
              "hrs-gcpdev-ssh-test",
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "NY8fOdPLVg8=",
            "zone": "asia-east1-a"
          },
          "dependencies": [
            "google_compute_network.test_vpc_network",
            "google_compute_subnetwork.test_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "test_vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/wt-gd-pdd2/global/networks/hrs-test-network",
            "mtu": 0,
            "name": "hrs-test-network",
            "project": "wt-gd-pdd2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/global/networks/hrs-test-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "test_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-29T00:14:49.695-07:00",
            "gateway_address": "10.55.0.1",
            "id": "projects/wt-gd-pdd2/regions/asia-east1/subnetworks/hrs-test-subnetwork",
            "ip_cidr_range": "10.55.0.0/24",
            "name": "hrs-test-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/global/networks/hrs-test-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "wt-gd-pdd2",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wt-gd-pdd2/regions/asia-east1/subnetworks/hrs-test-subnetwork"
          },
          "dependencies": [
            "google_compute_network.test_vpc_network"
          ]
        }
      ]
    }
  ]
}